--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "author": "Ace Nanter",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "rimraf": "^5.0.5"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
